实现异步的拦截器